# ChangeLog for dev-lang/tinycobol
# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/tinycobol/ChangeLog,v 1.6 2003/11/12 08:57:15 phosphan Exp $

  12 Nov 2003; Patrick Kursawe <phosphan@gentoo.org> tinycobol-0.61.ebuild:
  libhtcobol.so symlink was not installed correctly and nobody noticed. Does
  anyone use this at all?

*tinycobol-0.61 (25 Sep 2003)

  25 Sep 2003; Patrick Kursawe <phosphan@gentoo.org> metadata.xml,
  tinycobol-0.61.ebuild, files/tinycobol-0.61.patch:
  Version bump (bug #29515).

  08 Jul 2003; Patrick Kursawe <phosphan@gentoo.org> tinycobol-0.60.ebuild:
  Removing manual setting of db3, no idea why it was in. This closes bug 23576.

  27 Jun 2003; Patrick Kursawe <phosphan@gentoo.org> tinycobol-0.60.ebuild:
  Corrected dependencies according to bug 23576

  12 Jun 2003; <msterret@gentoo.org> tinycobol-0.60.ebuild:
  fix Header

*tinycobol-0.60 (12 May 2003)

  12 May 2003; Patrick Kursawe <phosphan@gentoo.org> tinycobol-0.60.ebuild:
  Initial import, suggestion by Rigo Ketelings <rigo@home.nl> in bug 15686
